sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: value or is not a member of Boolean
}while ((parc1==true) or (parc2==true))
                      ^