sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
val p=getNombreValeurs()
var swap=true
var parc1=false
var parc2=false
do {
	swap=false
	parc1=false
	parc2=false
	for (i<-0 to p-2){
		if (plusPetit(i,i+1)){
			echange(i,i+1)
			swap=true
			parc1=true
		}
	}
	for (i<-p-2 to 0 by -1){
		if (plusPetit(i,i+1)){
			echange(i,i+1)
			swap=true
		}
		
	}
	
}while ((parc1==true) or (parc2==true))
}
